# pthreadPractice

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  main.c
src/a_lib/: CMakeLists.txt  a.c  a.h
src/a_lib/add/: add.c  add.h
src/a_lib/bar/: bar.c
src/a_lib/foo/: foo.c
src/a_lib/multiply/: multiply.c  multiply.h
src/b_lib/: CMakeLists.txt  b.c
test/: CMakeLists.txt
test/src/a_lib/add/: test_add.cpp
